# Json-Performance

./: .gitignore  CMakeLists.txt  CMakePresets.json  DiscordData.json  GenerateGraphs.py  JsonData.json  License.md  Linux-Clang.md  Linux-GCC.md  MacOS-CLANG.md  MacOS-GCC.md  MacOS-GNUCXX.md  ReadMe.md  Ubuntu-CLANG.md  Ubuntu-GCC.md  Ubuntu-GNUCXX.md  Windows-MSVC.md  macOS-Clang.md  macOS-GCC.md  push-script.ps1  sweep-macos-clang.sh  sweep-macos-gcc.sh  sweep-msvc.ps1  sweep-ubuntu-clang.sh  sweep-ubuntu-gcc.sh
.github/workflows/: Benchmark.yml  Benchmarking.yml  Build-And-Test.yml  CLANG-MacOS-XCode.yml  CLANG-MacOS.yml  CLANG-Ubuntu.yml  GCC-Ubuntu.yml  MSVC-Windows.yml
Json/: Abc Test (Minified)-glaze.json  Abc Test (Minified)-jsonifier.json  Abc Test (Minified)-simdjson.json  Abc Test (Prettified)-glaze.json  Abc Test (Prettified)-jsonifier.json  Discord Test (Prettified)-glaze.json  Discord Test (Prettified)-jsonifier.json  DiscordData-Non-NewLine.json  Json Test (Minified)-glaze.json  Json Test (Minified)-jsonifier.json  Json Test (Minified)-simdjson.json  Json Test (Prettified)-glaze.json  Json Test (Prettified)-jsonifier.json  Json Test (Prettified)-simdjson.json  JsonData-Minified.json  JsonData-Prettified.json  JsonData.json  Minify Test-jsonifier.json  Results.json  TwitterData-Prettified.json
Json/MacOS-CLANG/: Abc (Out of Order) Test (Minified)-glaze.json  Abc (Out of Order) Test (Minified)-jsonifier.json  Abc (Out of Order) Test (Minified)-simdjson.json  Abc (Out of Order) Test (Minified).json  Abc (Out of Order) Test (Prettified)-glaze.json  Abc (Out of Order) Test (Prettified)-jsonifier.json  Abc (Out of Order) Test (Prettified)-simdjson.json  Abc (Out of Order) Test (Prettified).json  Abc Test (Minified)-glaze.json  Abc Test (Minified)-jsonifier.json  Abc Test (Minified)-simdjson.json  Abc Test (Prettified)-glaze.json  Abc Test (Prettified)-jsonifier.json  Abc Test (Prettified)-simdjson.json  Bool Test-glaze.json  Bool Test-jsonifier.json  Bool Test-simdjson.json  Bool Test.json  Canada Test (Minified)-glaze.json  Canada Test (Minified)-jsonifier.json  Canada Test (Minified)-simdjson.json  CitmCatalog Test (Minified)-glaze.json  CitmCatalog Test (Minified)-jsonifier.json  CitmCatalog Test (Minified)-simdjson.json  CitmCatalog Test (Prettified)-glaze.json  CitmCatalog Test (Prettified)-jsonifier.json  CitmCatalog Test (Prettified)-simdjson.json  Discord Test (Minified)-glaze.json  Discord Test (Minified)-jsonifier.json  Discord Test (Minified)-simdjson.json  Discord Test (Prettified)-glaze.json  Discord Test (Prettified)-jsonifier.json  Discord Test (Prettified)-simdjson.json  Double Test-glaze.json  Double Test-jsonifier.json  Double Test-simdjson.json  Double Test.json  Int Test-glaze.json  Int Test-jsonifier.json  Int Test-simdjson.json  (+41 more)
Json/MacOS-GCC/: Abc (Out of Order) Test (Minified)-glaze.json  Abc (Out of Order) Test (Minified)-jsonifier.json  Abc (Out of Order) Test (Minified).json  Abc (Out of Order) Test (Prettified)-glaze.json  Abc (Out of Order) Test (Prettified)-jsonifier.json  Abc (Out of Order) Test (Prettified)-simdjson.json  Abc Test (Minified)-jsonifier.json  Abc Test (Minified)-simdjson.json  Abc Test (Prettified)-glaze.json  Abc Test (Prettified)-jsonifier.json  Abc Test (Prettified)-simdjson.json  Bool Test-glaze.json  Bool Test-jsonifier.json  Bool Test-simdjson.json  Bool Test.json  Canada Test (Minified)-simdjson.json  CitmCatalog Test (Minified)-glaze.json  CitmCatalog Test (Minified)-simdjson.json  CitmCatalog Test (Prettified)-glaze.json  CitmCatalog Test (Prettified)-jsonifier.json  CitmCatalog Test (Prettified)-simdjson.json  Discord Test (Minified)-glaze.json  Discord Test (Minified)-jsonifier.json  Discord Test (Minified)-simdjson.json  Discord Test (Prettified)-glaze.json  Discord Test (Prettified)-jsonifier.json  Discord Test (Prettified)-simdjson.json  Double Test-glaze.json  Double Test-jsonifier.json  Double Test-simdjson.json  Double Test.json  Int Test-glaze.json  Int Test-simdjson.json  Int Test.json  Json Test (Minified)-glaze.json  Json Test (Minified)-jsonifier.json  Json Test (Minified)-simdjson.json  Json Test (Minified).json  Json Test (Prettified)-glaze.json  Json Test (Prettified)-jsonifier.json  (+27 more)
Json/MacOS-GNUCXX/: Abc (Out of Order) Test (Minified)-glaze.json  Abc (Out of Order) Test (Minified)-jsonifier.json  Abc (Out of Order) Test (Minified)-simdjson.json  Abc (Out of Order) Test (Minified).json  Abc (Out of Order) Test (Prettified)-glaze.json  Abc (Out of Order) Test (Prettified)-jsonifier.json  Abc (Out of Order) Test (Prettified)-simdjson.json  Abc (Out of Order) Test (Prettified).json  Abc Test (Minified)-glaze.json  Abc Test (Minified)-jsonifier.json  Abc Test (Minified)-simdjson.json  Abc Test (Prettified)-glaze.json  Abc Test (Prettified)-jsonifier.json  Abc Test (Prettified)-simdjson.json  Bool Test-glaze.json  Bool Test-jsonifier.json  Bool Test-simdjson.json  Bool Test.json  Canada Test (Minified)-jsonifier.json  Canada Test (Minified)-simdjson.json  Canada Test (Prettified)-jsonifier.json  CitmCatalog Test (Minified)-glaze.json  CitmCatalog Test (Minified)-jsonifier.json  CitmCatalog Test (Minified)-simdjson.json  CitmCatalog Test (Prettified)-glaze.json  CitmCatalog Test (Prettified)-jsonifier.json  CitmCatalog Test (Prettified)-simdjson.json  Discord Test (Minified)-glaze.json  Discord Test (Minified)-jsonifier.json  Discord Test (Minified)-simdjson.json  Discord Test (Prettified)-glaze.json  Discord Test (Prettified)-jsonifier.json  Discord Test (Prettified)-simdjson.json  Double Test-glaze.json  Double Test-jsonifier.json  Int Test-jsonifier.json  Int Test.json  (+38 more)
Source/: Common.hpp  ConformanceTests.hpp  Glaze.hpp  Jsonifier.hpp  Simdjson.hpp  Tests.hpp  main.cpp
Source-2/: tests.hpp
json/: Abc (Out of Order) Test (Prettified).json
source/: all_tests.hpp  apache-builds.hpp  canada.hpp  citm_catalog.hpp  common.hpp  discord.hpp  github_events.hpp  google_maps_response.hpp  instruments.hpp  main.cpp  marine_ik.hpp  mesh.hpp  random.hpp  semanticscholar.hpp  tests.hpp  twitter.hpp
(+698 files in other folders)
